--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ rvm:
 before_install: gem install bundler -v 1.11.2
 before_script:
   - cp config/config.travis.yml config/config.yml
+script:
+  - bundle exec rspec
