--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ rvm:
 before_install: gem install bundler -v 1.11.2
 before_script:
   - cp config/config.travis.yml config/config.yml
+services:
+  - rabbitmq
 script:
   - bundle exec rspec
 addons:
